Images 23,24 complete(Community Section) (nightly build)

--- a/src/components/common/aq-profile-pic-element.html
+++ b/src/components/common/aq-profile-pic-element.html
@@ -5,13 +5,13 @@
             :host{
                 display: inline-block;
             }
-            iron-image{
+            iron-image {
                 --iron-image-width: 35px;
                 --iron-image-height: 35px;
                 border-radius: 50%;
             }
         </style>
-        <iron-image src="{{src}}"></iron-image>
+        <iron-image src="pics/profile_pic.jpg"></iron-image>
     </template>
     <script>
         Polymer({
