--- a/src/components/common/aq-backtest-detail-item.html
+++ b/src/components/common/aq-backtest-detail-item.html
@@ -107,7 +107,7 @@
         }
 
         .paper_body {
-            width: 98%;
+            width: var(--aq-backtest-detail-item-width,98%);
             text-align: -webkit-center;
             color: #24293d;
         }
@@ -121,7 +121,7 @@
 
         .card-actions {
             background-color: #fff;
-
+            border:none;
         }
 
         paper-tabs {
@@ -196,13 +196,16 @@
         .text-content-bold{
             font-weight: 700;
         }
+        .paper_body{
+            margin: 0;
+        }
     </style>
 
     <template>
 
         <aq-check-authentication id='authItem'></aq-check-authentication>
 
-        <paper-card class="flex detail layout vertical paper_body">
+        <paper-card class="flex detail layout vertical paper_body" elevation="{{elevation}}">
             <div class='card-actions'>
                 <div id='detail-header-bottom' class="layout horizontal flex">
                     <!--<span class="self-center">Risk Metrics</span>-->
@@ -309,6 +312,10 @@
             is: 'aq-backtest-detail-item',
 
             properties: {
+                elevation:{
+                    type:Number,
+                    value:1
+                },
                 index:{
                     type:String
                 },
