--- a/src/components/common/aq-tag-element.html
+++ b/src/components/common/aq-tag-element.html
@@ -19,6 +19,7 @@
                 background-color: #f2f2f2;
                 border-radius: 2px;
                 margin-right: 15px;
+                padding-bottom:3px;
             }
         </style>
         <div class="tag-container">
