--- a/src/components/community/aq-community-postdetail-reply.html
+++ b/src/components/community/aq-community-postdetail-reply.html
@@ -4,23 +4,20 @@
 <link rel='import' href='../../icons/aq-iconset.html'>
 
 <link rel="import" href="../common/aq-check-authentication.html">
-<<<<<<< HEAD
 <link rel="import" href="../aq-markdown-editor.html">
-=======
-<!--<link rel="import" href="../aq-markdown-editor.html">-->
->>>>>>> f09608eebce503ed7cd0c324925a218b1ae85298
 <link rel="import" href="../aq-html-editor.html">
 <link rel="import" href="./aq-community-previewpost.html">
 <link rel="import" href="../../dialog/aq-community-attachbacktest-dialog.html">
-
+<link href="https://fonts.googleapis.com/css?family=Lato:400,700" rel="stylesheet">
 <dom-module id="aq-community-postdetail-reply">
-
-<<<<<<< HEAD
     <style include="iron-flex iron-flex-alignment iron-positioning">
     </style>
 
     <style>
-
+        :host{
+            font-family: 'Lato' , sans-serif;
+            font-size: 16px;
+        }
         #attachButton {
             margin-bottom: -40px;
             margin-right: 7px;
@@ -58,7 +55,13 @@
             display: none;
             padding: 5px;
         }
-
+        paper-button{
+            border:none;
+        }
+        #reply-btn{
+            background-color: teal;
+            color:#fff;
+        }
 
     </style>
 
@@ -78,17 +81,20 @@
                                        icon="aq-icons:remove-circle"></paper-icon-button>
                 </div>
 
-                <paper-button id='attachButton' class="self-end" raised noink on-tap='onAttach'>Attach
-                    <iron-icon icon="aq-icons:attach-file"></iron-icon>
-                </paper-button>
+                <!--<paper-button id='attachButton' class="self-end" raised noink on-tap='onAttach'>Attach-->
+                    <!--<iron-icon icon="aq-icons:attach-file"></iron-icon>-->
+                <!--</paper-button>-->
 
                 <!--<aq-markdown-editor id="editor" place-holder="Write a reply"></aq-markdown-editor>-->
                 <aq-html-editor id="editor"></aq-html-editor>
                 <div class="layout horizontal" id='buttons'>
                     <div id='errorMessage'><i>[[error]]</i></div>
+                    <paper-button id='attachButton' raised noink on-tap='onAttach'>Attach
+                        <iron-icon icon="aq-icons:attach-file"></iron-icon>
+                    </paper-button>
                     <div class="flex"></div>
-                    <paper-button raised noink on-tap='onPreview'>Preview</paper-button>
-                    <paper-button raised noink on-tap="postThread">Reply</paper-button>
+                    <!--<paper-button raised noink on-tap='onPreview'>Preview</paper-button>-->
+                    <paper-button raised noink on-tap="postThread" id="reply-btn">Post Reply</paper-button>
                 </div>
             </div>
         </template>
@@ -245,233 +251,3 @@
 
         });
     </script>
-=======
-   <style  include="iron-flex iron-flex-alignment iron-positioning">
-   </style>
-   
-  <style>
-
-    #attachButton {    
-        margin-bottom: -40px;
-        margin-right: 7px;
-        color:teal;
-        border:none !important;
-        z-index: 2;
-    }
-
-    paper-button {
-        border: 1px solid #24293d;
-        height:30px;
-        font-size: 13px;
-    }
-
-    #buttons{
-        margin-bottom: 10px;
-        margin-top:10px;
-    }
-
-    #errorMessage {
-      color:#cc6666;
-    }
-
-    #attachedMessageDiv {
-        --display: none;
-        color:#cc6666;
-        font-size:14px;
-        height:32px;
-        margin-bottom: 10px;
-    }
-
-    #removeIcon {
-        width:25px;
-        height:25px;
-        display: none;
-        padding:5px;
-    }
-
-
-  </style>
-
-  <template>
-      <aq-check-authentication id='authItem'></aq-check-authentication>
-      <template is='dom-if' if="[[preview]]">
-          <aq-community-previewpost reply=1 thread-data="[[threadData]]"></aq-community-previewpost>  
-      </template>
-
-      <template is='dom-if' if="[[!preview]]">           
-        
-        <div id="replybox" class="flex layout vertical">
-
-          <div id="attachedMessageDiv" class="layout horizontal self-end">
-              <i class="self-end">[[attachedMessage]]</i>
-              <paper-icon-button id='removeIcon' class="self-end" title="Remove" on-tap='onRemoveAttached' icon="aq-icons:remove-circle"></paper-icon-button>
-          </div>
-
-          <paper-button id='attachButton' class="self-end" raised noink on-tap='onAttach'>Attach<iron-icon icon="aq-icons:attach-file"></iron-icon></paper-button>
-          
-          <!--<aq-markdown-editor id="editor" place-holder="Write a reply"></aq-markdown-editor>-->
-            <aq-html-editor id="editor"></aq-html-editor>
-          
-          <div class="layout horizontal" id='buttons'>
-              <div id='errorMessage'><i>[[error]]</i></div>
-              <div class="flex"></div>
-              <paper-button raised noink on-tap='onPreview'>Preview</paper-button>
-              <paper-button raised noink on-tap="postThread">Reply</paper-button>
-          </div>
-        </div>
-      </template>
-
-      <aq-community-attachbacktest-dialog id='btDialog'>
-        </aq-community-attachbacktest-dialog>  
-             
-      <iron-ajax 
-          url="[[computePostReplyThreadUrl(threadId)]]" 
-          body="{{threadData}}" 
-          method='POST' 
-          id='postThreadQuery' 
-          headers='{{header}}' 
-          handle-as="json" 
-          on-response="onPostReplyResponse"
-          on-error="onPostReplyError" 
-          debounce-duration="300">
-      </iron-ajax>
-  </template>
-
-  <script>
-    Polymer({
-      is: 'aq-community-postdetail-reply',
-
-      properties:{
-        
-        header:Object,
-        
-        error: String,
-        
-        threadId: {
-          type: String,
-          observer: "_threadIdChanged",
-        },
-        
-        threadData: Object,
-        
-        attachedMessage:String,
-        
-        attachedBacktestId:String,
-        
-        preview:{
-          type:Boolean,
-          value:false,
-        },
-
-      },
-
-      listeners :{
-        'backtest-attached':'onBacktestAttached',
-        'edit-clicked':'onEdit',
-        'submit-clicked':'postThread',
-      },
-
-      computePostReplyThreadUrl: function(threadId) {
-          var APIEndPoint = new Polymer.IronMetaQuery({key: 'APIEndPoint'}).value; 
-          return APIEndPoint+'/thread/'+threadId; 
-      },
-
-      postThread: function() {
-
-          if (!this.$.authItem.checkHasToken()) {
-              this.fire('rt-changed', {route:'user/signin'});
-          }
-          
-          if(this.processInput()) {
-              this.header = this.$.authItem.getHeader();
-              this.$.postThreadQuery.generateRequest();
-              this.onRemoveAttached();
-              this.preview = false;
-          } else {
-              this.error = "Cannot post an empty reply. Please create a valid reply.";
-          }
-      },
-
-      onPostReplyResponse: function(e) {
-        var replies = e.detail.response.replies;
-        if (replies.length > 0) {
-          this.fire('reply-added',{reply:replies[replies.length - 1]});  
-        }      
-      },
-
-      onPostReplyError: function(e) {
-      },
-
-      clearEditor: function() {
-        this.$$('#editor').clearContent();
-      },
-
-      processInput: function() {
-          const markdownText = this.$$('#editor').getContent();
-          var x = localStorage.getItem('my-app-storage');
-          var user = JSON.parse(x).user;
-
-          var threadData = {
-              "markdownText": markdownText,
-              "user":{"firstName":user.firstName,"lastName":user.lastName},
-              "updatedAt": new Date(),
-          };
-
-          if(this.attachedBacktestId && this.attachedBacktestId!="") {
-             threadData["backtestId"] = this.attachedBacktestId;
-          }
-
-          if(threadData["markdownText"]!="") {
-            this.threadData = threadData;
-              this.error = "";
-              return true;
-          } else {
-            return false;
-          }
-      },
-
-      onPreview: function() { 
-          this.preview = this.processInput();
-          if(!this.preview) {
-              this.error = "No preview available for empty reply. Please create a valid reply.";
-          }
-      },
-
-      onEdit: function() {
-          this.preview = false;
-      },
-
-      onAttach: function() {
-          this.$.btDialog.open();
-      },
-
-      onBacktestAttached: function(e) {
-          this.attachedBacktestId = e.detail.id;
-          this.attachedMessage = "Attached Backtest ID: "+this.attachedBacktestId;
-          this.$$('#removeIcon').style.display = 'inline';
-      },
-
-      onRemoveAttached: function() {
-          this.attachedBacktestId = "";
-          this.attachedMessage = "";
-          this.threadData = {};
-          this.$$('#removeIcon').style.display = 'none';
-      },
-
-      _threadIdChanged: function(nThreadId, oThreadId) {
-          if(!nThreadId || nThreadId == "") {
-              this.resetView();
-          }
-      },
-
-      resetView: function() {
-        this.preview = false;
-        this.$$('#editor').setContent("");
-        this.$$('#editor').focus();
-        this.onRemoveAttached(); 
-      },
-
-    });
-  </script>
->>>>>>> f09608eebce503ed7cd0c324925a218b1ae85298
-</dom-module>
