Write Post Screen Changed(nightly build)

--- a/src/components/aq-html-editor.html
+++ b/src/components/aq-html-editor.html
@@ -6,8 +6,9 @@
             --polymer-quill-editor-min-height: 150px;
         }
         polymer-quill{
-            box-shadow: 0 3px 8px rgba(0,0,0,0.2);
+            box-shadow: var(--aq-html-editor-box-shadow,0 0px 0px rgba(0,0,0,0.2));
             border-radius: 4px;
+            border:var(--aq-html-editor-border,1px solid #e7e7e7);
         }
     </style>
     <template>
