--- a/src/components/common/aq-tag-element.html
+++ b/src/components/common/aq-tag-element.html
@@ -22,8 +22,9 @@
                 padding-bottom:3px;
             }
         </style>
-        <div class="tag-container">
+        <div class="tag-container layout horizontal center">
             <span class="tag-content">{{label}}</span>
+            <content></content>
         </div>
     </template>
     <script>
