--- a/src/components/community/aq-community-postdetail-content.html
+++ b/src/components/community/aq-community-postdetail-content.html
@@ -5,6 +5,7 @@
 <link rel="import" href="../common/aq-profile-pic-element.html">
 <link href="https://fonts.googleapis.com/css?family=Lato:400,700" rel="stylesheet">
 <link rel="import" href="../common/aq-label-content-item.html">
+<link rel="import" href="../../../bower_components/iron-icons/iron-icons.html">
 <dom-module id="aq-community-postdetail-content">
 
     <style include="iron-flex iron-flex-alignment iron-positioning">
