--- a/src/components/community/aq-community-postdetail-reply.html
+++ b/src/components/community/aq-community-postdetail-reply.html
@@ -62,6 +62,10 @@
             background-color: teal;
             color:#fff;
         }
+        aq-html-editor{
+            --aq-html-editor-box-shadow:0 3px 8px rgba(0,0,0,0.2);
+            --aq-html-editor-border:none;
+        }
 
     </style>
 
