--- a/src/components/community/aq-community-previewpost.html
+++ b/src/components/community/aq-community-previewpost.html
@@ -26,13 +26,17 @@
         }
 
         paper-button {
-            border: 1px solid #24293d;
+            /*border: 1px solid #24293d;*/
             height:30px;
             font-size: 13px;
         }
 
         #buttons{
-            margin-bottom: 10px;
+            margin-bottom: 30px;
+            margin-top: 30px;
+        }
+        aq-community-postdetail-header{
+            margin-top: 30px;
         }
 
     </style>
